# polynomial-calculator

./: CMakeLists.txt  Doxyfile.in  MainPage.dox  README.md
example/: example.err  example.in  example.out
src/: calc.c  calc_processor.c  calc_processor.h  main.c  poly.c  poly.h  poly_example.c  poly_io.c  poly_io.h  poly_stack.c  poly_stack.h  poly_test.c
src/calc/: calc_command.c  calc_command.h  calc_error.c  calc_error.h  calc_poly.c  calc_poly.h
src/calculator/: calc_command.c  calc_command.h  calc_error.c  calc_error.h  calc_poly.c  calc_poly.h
src/misc/: poly_example.c
src/poly/: poly.c  poly.h  poly_stack.c  poly_stack.h
src/poly/io/: numeric_parser.c  numeric_parser.h  poly_io.c  poly_io.h  poly_parser.c  poly_parser.h
src/polynomial/: poly.c  poly.h  poly_io.c  poly_stack.h
src/polynomial/io/: numeric_parser.h  poly_io.c  poly_io.h  poly_parser.c
src/polynomial/parser/: numeric_parser.c  numeric_parser.h  poly_parser.c  poly_parser.h
src/polynomial/structures/: poly_stack.h
test/: poly_data.h  poly_test.c
